ci: remove unnecessary paths and don't always install the heavy candid-extractor (#211)

--- a/.github/workflows/examples-password-manager-with-metadata.yml
+++ b/.github/workflows/examples-password-manager-with-metadata.yml
@@ -7,12 +7,6 @@ on:
   pull_request:
     paths:
       - examples/password_manager_with_metadata/**
-      - backend/**
-      - Cargo.toml
-      - Cargo.lock
-      - frontend/ic_vetkeys/**
-      - package.json
-      - package-lock.json
       - .github/workflows/provision-darwin.sh
       - .github/workflows/provision-linux.sh
       - .github/workflows/examples-password-manager-with-metadata.yml
@@ -30,6 +24,7 @@ jobs:
       - name: Deploy Password Manager With Metadata Darwin
         run: |
           set -eExuo pipefail
+          cargo install candid-extractor
           cd examples/password_manager_with_metadata/rust
           dfx start --background && dfx deploy
           cd frontend
@@ -43,6 +38,7 @@ jobs:
       - name: Deploy Password Manager With Metadata Linux
         run: |
           set -eExuo pipefail
+          cargo install candid-extractor
           cd examples/password_manager_with_metadata/rust
           dfx start --background && dfx deploy
           cd frontend
@@ -57,6 +53,7 @@ jobs:
       - name: Deploy Password Manager With Metadata Darwin
         run: |
           set -eExuo pipefail
+          cargo install candid-extractor
           cd examples/password_manager_with_metadata/motoko
           dfx start --background && dfx deploy
           cd frontend
@@ -70,6 +67,7 @@ jobs:
       - name: Deploy Password Manager With Metadata Linux
         run: |
           set -eExuo pipefail
+          cargo install candid-extractor
           cd examples/password_manager_with_metadata/motoko
           dfx start --background && dfx deploy
           cd frontend
