--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     paths:
       - frontend/ic_vetkeys/**
-      - backend/**
+      - backend/**/canisters/**
       - package.json
       - package-lock.json
       - .github/workflows/frontend_ic_vetkeys.yml
