perf: CRP-2900 Use optimized G2 generator point multiplication (#219)
This saves 123M cycles during execution in a canister, as reported by
the canbench results.

The implementation is just a port of the existing algorithm in
https://github.com/dfinity/ic/blob/master/rs/crypto/internal/crypto_lib/bls12_381/type/src/lib.rs
used for multiplication by fixed points in the replica.

--- a/backend/rs/benchmarks/Cargo.toml
+++ b/backend/rs/benchmarks/Cargo.toml
@@ -13,4 +13,5 @@ candid = "0.10.0"
 getrandom = { version = "0.2", features = ["custom"] }
 hex = { workspace = true }
 ic-cdk = "0.18.5"
-ic-vetkeys = "0.3.0"
+ic-vetkeys = { path = "../ic_vetkeys" }
+
