feat: CRP-2847 Add AES-GCM encryption helpers to the Rust library (#220)
This matches the behavior of the functions in the TS frontend library

--- a/backend/rs/ic_vetkeys/Cargo.toml
+++ b/backend/rs/ic_vetkeys/Cargo.toml
@@ -24,6 +24,7 @@ readme = "README.md"
 crate-type = ["lib"]
 
 [dependencies]
+aes-gcm = "0.10"
 anyhow = { workspace = true }
 candid = { workspace = true }
 ic_bls12_381 = { version = "0.10.1", default-features = false, features = [
